feat: update index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Zhazira Satbay</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="contact">
+        <div class="profile"></div>
+        <div class="contact-info"></div>
+        <div class="work"></div>
+      </div>
+      <div class="applications">
+        <div class="first-apps">
+          <div class="first"></div>
+          <div class="second"></div>
+        </div>
 
+        <div class="second-apps">
+          <div class="third"></div>
+          <div class="fourth"></div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
